RESOLVED FIXED107100
[EFL][WebGL] Fix Memory leaks in EGL and GLX surface.
https://bugs.webkit.org/show_bug.cgi?id=107100
Summary [EFL][WebGL] Fix Memory leaks in EGL and GLX surface.
Kalyan
Reported 2013-01-16 23:40:29 PST
Some Issues: 1)We dont destroy the created FBO. 2)We dont free temp allocated XVisuals. 3)We close the XDisplay before surface and context are released.
Attachments
patch (6.47 KB, patch)
2013-01-17 00:13 PST, Kalyan
no flags
patch (4.43 KB, patch)
2013-01-17 18:31 PST, Kalyan
no flags
patch v3 (4.43 KB, patch)
2013-01-17 20:39 PST, Kalyan
no flags
Kalyan
Comment 1 2013-01-17 00:13:52 PST
Kalyan
Comment 2 2013-01-17 07:43:48 PST
Comment on attachment 183131 [details] patch Removing request for review. Will update a new patch without X changes as it will be handled in a separate changeset
Kalyan
Comment 3 2013-01-17 18:31:44 PST
Viatcheslav Ostapenko
Comment 4 2013-01-17 20:02:21 PST
Looks good to me.
Laszlo Gombos
Comment 5 2013-01-17 20:21:07 PST
Comment on attachment 183343 [details] patch View in context: https://bugs.webkit.org/attachment.cgi?id=183343&action=review Patch looks good to me as well. Please address the few nits. > Source/WebCore/ChangeLog:8 > + GLX and EGL surface dont release GL resources created by them. nit: dont -> do not or don't > Source/WebCore/ChangeLog:9 > + This patch enusures that the leaks are fixed and typo: enusures -> ensures > Source/WebCore/ChangeLog:19 > + (WebCore::GLXOffScreenContext::freeResources): Dont reset the display to null. nit: Dont -> Don't
Kalyan
Comment 6 2013-01-17 20:39:19 PST
Created attachment 183358 [details] patch v3
Kalyan
Comment 7 2013-01-17 20:40:07 PST
(In reply to comment #5) > (From update of attachment 183343 [details]) > View in context: https://bugs.webkit.org/attachment.cgi?id=183343&action=review > > nit: Dont -> Don't done
Laszlo Gombos
Comment 8 2013-01-17 20:43:37 PST
Comment on attachment 183358 [details] patch v3 r=me.
WebKit Review Bot
Comment 9 2013-01-18 07:21:23 PST
Comment on attachment 183358 [details] patch v3 Clearing flags on attachment: 183358 Committed r140145: <http://trac.webkit.org/changeset/140145>
WebKit Review Bot
Comment 10 2013-01-18 07:21:27 PST
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.